--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to top, #b6bceb 0%, #a1a9e9 1%, #e1cfe7 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.dark {
+  background-image: none;
 }
 
 code {
